DHFPROD-4172: Added support for NestedEntity in Mapping and Bug Fix for DHFPROD-4690 DHFPROD-4172: Fixing test heading (+1 squashed commit) Squashed commits: [e5071f310] DHFPROD-4172: Added support for NestedEntity in Mapping and Bug Fix for DHFPROD-4690 DHFPROD-4172:  Fixed the issue where source query was not being enforced as mandatory(DHFPROD-4690) (+1 squashed commit) Squashed commits: [8c79b7e22] DHFPROD-4172: Added support for NestedEntity in Mapping DHFPROD-4172: Adding unit test for Nested Entities (+2 squashed commits) Squashed commits: [c51cd6ab6] DHFPROD-4172: Updated the logic for handling Mapping expressions for nested Entities [6f75c7c88] DHFPROD-4172: Support for NestedEntity

--- a/one-ui/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
+++ b/one-ui/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
@@ -101,6 +101,24 @@ hr {
         vertical-align: top;
     }
 }
+
+.typeContainer {
+    margin-bottom: -17px;
+
+    > .typeContextContainer {
+        margin-top: -13px;
+        margin-bottom:-14px;
+        > .typeContext {
+            color: #777777;
+            font-size: 12px
+        }
+
+        >.typeText{
+            margin-top: 10px
+        }
+    }
+}
+
 .mapExpParentContainer{
     //display: inline;
     margin-top: -12px;
@@ -220,6 +238,13 @@ hr {
 .docLink{
     cursor: pointer;
     margin-left: -5px;
+}
+
+.contextHelp{
+    width: 14vw;
+    word-wrap: normal;
+    font-size: 14px;
+    color: #777777;
 }
 .expandIcon{
     //color: black;
